k8slearn/5.Kubernetes 网络/5.8.GatewayAPI/Manifest/02-whoami-httproute.yaml
# 02-whoami-httproute.yaml
# apiVersion: networking.x-k8s.io/v1alpha1
# kind: HTTPRoute
# metadata:
#   name: http-app-1
#   namespace: kube-system
#   labels:
#     app: traefik
# spec:
#   hostnames:
#     - 'whoami'
#   rules:
#     - matches:
#         - path:
#             type: Exact
#             value: /
#       forwardTo:
#         - serviceName: whoami
#           port: 80
#           weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: kube-system
spec:
  hostnames:
    - "whoami"
  rules:
    - matches:
        - path:
            type: Exact
            value: "/"
      backendRefs:
        - name: whoami
          port: 80
          weight: 1
