k8slearn/5.Kubernetes 网络/5.8.GatewayAPI/Manifest/03-whoami-httproute-paths.yaml
# 03-whoami-httproute-paths.yaml
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: kube-system
  labels:
    app: traefik
spec:
  hostnames:
    - whoami
  rules:
    - forwardTo:
        - port: 80
          serviceName: whoami
          weight: 1
      matches:
        - path:
            type: Exact # 匹配 /foo 的路径
            value: /foo
