k8slearn/5.Kubernetes 网络/5.8.GatewayAPI/Manifest/04-whoami-nginx-canary.yaml
# 04-whoami-nginx-canary.yaml
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  labels:
    app: traefik
  name: http-app-1
  namespace: kube-system
spec:
  hostnames:
    - whoami
  rules:
    - forwardTo:
        - port: 80
          serviceName: whoami
          weight: 3 # 3/4 的请求到whoami
        - port: 80
          serviceName: nginx
          weight: 1 # 1/4 的请求到whoami
